@@ -1,5 +1,8 @@
-Overview of changes from P3T 1.0.0 to 1.0.1
+Overview of changes from P3T 1.0.0 to 1.2.0
 ===========================================
+
+  [New features]
+    * Turn the backlight off when the system is idle.
 
   [Bug fixes]
     * Correctly decrease target time when the timer is running.
